mysql/kubernetes/traefik/vitess/vitess_vtctld_client_ingress_route.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRouteTCP
metadata:
  name: vtctld-client
spec:
  entryPoints:
    - grpc
  routes:
    - kind: Rule
      match: HostSNI(`*`)
      services:
        - name: vitess-vtctld-047eb1a6
          port: 15999
