mysql/kubernetes/traefik/vitess/vitess_vtgate_ingress_route.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRouteTCP
metadata:
  name: vtgate-mysql
spec:
  entryPoints:
    - mysql
  routes:
    - kind: Rule
      match: HostSNI(`*`)
      services:
        - name: vitess-vtgate-e05d80f4
          port: 3306
