mysql/kubernetes/traefik/vitess/vitess_vttablet_ingress_route.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: vttablet-web
spec:
  entryPoints:
    - web
  routes:
    - kind: Rule
      match: Host(`tagenal`) && PathPrefix(`/vttablet`)
      services:
        - name: vitess-vttablet-5613eb8f
          port: 9104
      middlewares:
        - name: vttablet-web-stripprefix
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: vttablet-web-stripprefix
spec:
  stripPrefix:
    prefixes:
      - /vttablet
